Changes in @NEW@:
  o Bug Fixes:
    * ccs2tar handles changesets with duplicate contents and hard links
      (CNY-1953)
    * An error in the way attributes of ServerProxy classes get
      marshaled has been fixed. (CNY-1956)
    * Derived packages properly handle files that were not flavored due
      to an exception in the upstream packages. (CNY-1954)

  o Server Changes
    * a bug which triggered an exception while migrating postgresql
      repositories has been fixed (CNY-1912)

Changes in 1.1.91:
  o Client Changes:
    * A new configuration option, "flavorPreferences", has been added.
      The client uses this list of flavors in trove selection.
      (CNY-1710)
    * Large files are now compressed on disk instead of in memory when
      creating rollbacks. (CNY-1896)
    * The Conary client API is now more careful with releasing open
      file descriptors. (CNY-1834)
    * The "migrate" mode has changed to overwrite changes made to
      files that are not yet owned by Conary, but already exist on the
      system, as well managed, non-configuration files that have
      changed. (CNY-1868)
    * When signals are received during updates, the journal is now
      rolled back before conary terminates. (CNY-1393)
    * A 'cvc checkout' of multiple projects uses far fewer repository
      calls now, and uses a single changeset.
    * The 'cvc update' and 'cvc diff' commands now accept a source
      version arguemnt without a source count. (CNY-1921)

  o Server Changes:

Changes in 1.1.31.4:
  o Server changes:
    * Setting "forceSSL" once again requires a HTTPS connection be
      used when authentication data is passed to an Apache based
      Conary Repository. (CNY-1880)
    * A bug that caused incorrect values for sourceItemId and
      clonedFromId to be used when groups and components were
      committed as part of one changeset has been fixed. (CNY-1903)
    * A bug that caused the Latest table to be rebuilt incorrectly